--- a/index.html
+++ b/index.html
@@ -1,9 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<style></style>
+<link rel="stylesheet" type="text/css" href="stylesheet.css" media=”screen”>
 </head>
 <body>
+    <header>
+        <img src="lucky_shrub.png" alt="Shrub's red logo">
+    </header>
+
+    <nav>
+        <ul>
+            <li><link rel="" href="">Home Page</li>
+            <li><link rel="" href="">Prodcuts</li>
+            <li><link rel="" href="">Contact</li>
+            <li><link rel="" href="">Info</li>
+        </ul>
+    </nav>
+
+<main>
+<section>
+    <article>
+        <h1></h1>
+        <p></p>
+    </article>
+</section>
+<section>
+    
+    <article>
+        <h1></h1>
+        <p></p>
+    </article>
+
+    <article>
+        <h1></h1>
+        <p></p>
+    </article>
+
+    <article>
+        <h1></h1>
+        <p></p>
+    </article>
+
+</section>
+</main>
+    <footer>
+        <div></div>
+        <div></div>
+    </footer>
     
 </body>
 </html>
