--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <header>
-        <img src="lucky_shrub.png" alt="Shrub's red logo">
+        <img src="" alt="">
     </header>
 
     <nav>
@@ -25,7 +25,7 @@
     </article>
 </section>
 <section>
-    
+
     <article>
         <h1></h1>
         <p></p>
