add header, color and centered

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <header>
-        <img src="" alt="">
+        <img id="photo" src="lucky_shrub.png" alt="Red lucky shrub" height="150vh">
     </header>
 
     <nav>
