--- a/index.html
+++ b/index.html
@@ -1,44 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="stylesheet" type="text/css" href="stylesheet.css" media=”screen”>
+    <link rel="stylesheet" type="text/css" href="stylesheet.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Noto+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <img id="photo" src="lucky_shrub.png" alt="Red lucky shrub" height="150vh">
+        <img class="logo" src="lucky_shrub.png" alt="Red lucky shrub">
     </header>
 
     <nav>
         <ul>
-            <li><link rel="" href="">Home Page</li>
-            <li><link rel="" href="">Prodcuts</li>
+            <li><link rel="" href="">Home</li>
+            <li><link rel="" href="">Products</li>
             <li><link rel="" href="">Contact</li>
             <li><link rel="" href="">Info</li>
         </ul>
     </nav>
 
 <main>
-<section>
+<section class="banner">
     <article>
-        <h1></h1>
-        <p></p>
+        <h1 class="banner-title">Based in Tuscon, Arizona</h1>
+        <p>Lucky Shrub is a medium-sized garden design firm that specializes in garden design and creation, maintenance and landscaping. The company also runs a small plant nursery that sells indoor and outdoor plants, making them a one-stop shop for clients to "transform any space into an oasis you can be proud of".
+
+        </p>
     </article>
 </section>
-<section>
+<section class="content-wrapper">
 
-    <article>
-        <h1></h1>
-        <p></p>
+    <article class="content-article">
+        <h1>Lucky Shrub</h1>
+        <p class="content-article-text" >Lucky Shrub was started by a husband and wife team, Jason and Maria, who share a long-time love for plants.</p>
     </article>
 
-    <article>
-        <h1></h1>
-        <p></p>
+    <article class="content-article">
+        <h1>about Jason</h1>
+        <p class="content-article-text">Jason is the garden architect. He creates and oversees all designs while managing his team of landscapers.</p>
     </article>
 
-    <article>
-        <h1></h1>
-        <p></p>
+    <article class="content-article">
+        <h1>about Maria</h1>
+        <p class="content-article-text">Maria manages all the marketing for the company and oversees the nursery.</p>
     </article>
 
 </section>
