--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Noto+Sans&display=swap" rel="stylesheet">
+<meta content="width=device-width, initial-scale=1" name="viewport" />
 </head>
 <body>
     <header>
-        <img class="logo" src="lucky_shrub.png" alt="Red lucky shrub">
+        <img class="logo" src="lucky_shrub.png" alt="Red lucky shrub logo">
     </header>
 
     <nav>
@@ -23,8 +24,8 @@
 <main>
 <section class="banner">
     <article>
-        <h1 class="banner-title">Based in Tuscon, Arizona</h1>
-        <p>Lucky Shrub is a medium-sized garden design firm that specializes in garden design and creation, maintenance and landscaping. The company also runs a small plant nursery that sells indoor and outdoor plants, making them a one-stop shop for clients to "transform any space into an oasis you can be proud of".
+        <h1 class="banner-title">Our Promotion!</h1>
+        <p>
 
         </p>
     </article>
@@ -32,18 +33,26 @@
 <section class="content-wrapper">
 
     <article class="content-article">
-        <h1>Lucky Shrub</h1>
-        <p class="content-article-text" >Lucky Shrub was started by a husband and wife team, Jason and Maria, who share a long-time love for plants.</p>
+        <img class="logo" src="lucky_shrub_green.png" alt="green lucky shrub logo">
+        <h1>Where we started.</h1>
+        <p class="content-article-text" >Based in Tuscon, Arizona, Lucky Shrub is a medium-sized garden design firm that 
+            specializes in garden design and creation, maintenance and landscaping.</p>
     </article>
 
     <article class="content-article">
-        <h1>about Jason</h1>
-        <p class="content-article-text">Jason is the garden architect. He creates and oversees all designs while managing his team of landscapers.</p>
+        <img class="logo" src="lucky_shrub_white.png" alt="white lucky shrub logo">
+        <h1>How we started.</h1>
+        <p class="content-article-text">Lucky Shrub
+            was started by a husband and wife team, Jason and Maria, who share a long-time love for plants.
+The company also runs a small plant nursery that sells indoor and outdoor plants, 
+            making them a one-stop shop for clients to "transform any space into an oasis you can be proud of. 
+</p>
     </article>
 
     <article class="content-article">
-        <h1>about Maria</h1>
-        <p class="content-article-text">Maria manages all the marketing for the company and oversees the nursery.</p>
+        <img class="logo" src="lucky_shrub.png" alt="Red lucky shrub logo">
+        <h1>What we do.</h1>
+        <p class="content-article-text">Jason is the garden architect. He creates and oversees all designs while managing his team of landscapers. Maria manages all the marketing for the company and oversees the nursery.</p>
     </article>
 
 </section>
