footer styled, sceen>700px - border around each section added

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 <section class="banner">
     <article>
         <h1 class="banner-title">Our Promotion!</h1>
-        <p>
-
+        <p class = click>
+Click here!
         </p>
     </article>
 </section>
@@ -58,9 +58,14 @@ The company also runs a small plant nursery that sells indoor and outdoor plants
 </section>
 </main>
     <footer>
-        <div></div>
-        <div></div>
+        <section class="footer-wrap">
+        <div>
+            <img class="logo" src="lucky_shrub.png" alt="Red lucky shrub logo">
+        </div>
+        <div>
+            <p>Lucky Shrub &#169</p>
+        </div>
+        </section>
     </footer>
-    
 </body>
 </html>
