removed footer background colour

--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@ The company also runs a small plant nursery that sells indoor and outdoor plants
     <footer>
         <section class="footer-wrap">
         <div>
-            <img class="logo" src="lucky_shrub.png" alt="Red lucky shrub logo">
+            <img class="logo" src="lucky_shrub_white.png" alt="White
+             lucky shrub logo">
         </div>
         <div>
             <p>Lucky Shrub &#169</p>
