added a element to  links in  nav bar

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 
     <nav>
         <ul>
-            <li><link rel="" href="">Home</li>
-            <li><link rel="" href="">Products</li>
-            <li><link rel="" href="">Contact</li>
-            <li><link rel="" href="">Info</li>
+            <li><a href="http://127.0.0.1:3000/coursera_web_page/index.html">Home</a></li>
+            <li><a href="">Products</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Info</a></li>
         </ul>
     </nav>
 
