corrected copyright order in p footer

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ The company also runs a small plant nursery that sells indoor and outdoor plants
              lucky shrub logo">
         </div>
         <div>
-            <p>Lucky Shrub &#169</p>
+            <p>&#169 Lucky Shrub</p>
         </div>
         </section>
     </footer>
