--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Noto+Sans&display=swap" rel="stylesheet">
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img class="logo" src="lucky_shrub.png" alt="Red lucky shrub logo">
+        <img class="logo" src="Asset 1@3x.png" alt="Red lucky shrub logo">
     </header>
 
     <nav>
@@ -33,14 +33,14 @@ Click here!
 <section class="content-wrapper">
 
     <article class="content-article">
-        <img class="logo" src="lucky_shrub_green.png" alt="green lucky shrub logo">
+        <img class="logo" src="Asset 1@3x.png" alt="green lucky shrub logo">
         <h1>Where we started.</h1>
         <p class="content-article-text" >Based in Tuscon, Arizona, Lucky Shrub is a medium-sized garden design firm that 
             specializes in garden design and creation, maintenance and landscaping.</p>
     </article>
 
     <article class="content-article">
-        <img class="logo" src="lucky_shrub_white.png" alt="white lucky shrub logo">
+        <img class="logo" src="Asset 3@3x.png" alt="white lucky shrub logo">
         <h1>How we started.</h1>
         <p class="content-article-text">Lucky Shrub
             was started by a husband and wife team, Jason and Maria, who share a long-time love for plants.
@@ -50,7 +50,7 @@ The company also runs a small plant nursery that sells indoor and outdoor plants
     </article>
 
     <article class="content-article">
-        <img class="logo" src="lucky_shrub.png" alt="Red lucky shrub logo">
+        <img class="logo" src="Asset 2@3x.png" alt="Red lucky shrub logo">
         <h1>What we do.</h1>
         <p class="content-article-text">Jason is the garden architect. He creates and oversees all designs while managing his team of landscapers. Maria manages all the marketing for the company and oversees the nursery.</p>
     </article>
